# agent-guardrail

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  policy.yaml  pyproject.toml
scripts/: run_agent_demo.py  run_hitl_demo.py
src/guardrail/: __init__.py  approvals.py  config.py
src/guardrail/audit/: __init__.py  postgres.py  sqlite.py
src/guardrail/db/: __init__.py  connection.py  migrate.py  schema.sql
src/guardrail/gateway/: __init__.py  audit.py  core.py  http_app.py  http_server.py  server.py
src/guardrail/mock_tools/: __init__.py  server.py
src/guardrail/policy/: __init__.py  engine.py  loader.py  models.py  state.py
tests/: test_gateway.py  test_hitl.py  test_policy_engine.py  test_postgres_audit.py
