[project]
name = "agent-guardrail"
version = "0.1.0"
description = "A guardrail and audit layer that sits between an AI agent and its tools (MCP proxy + policy engine + HITL approval)."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "anyio>=4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
