[project]
name = "agent-guardrail"
version = "0.1.0"
description = "A guardrail and audit layer that sits between an AI agent and its tools (MCP proxy + policy engine + HITL approval)."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.28",
    "psycopg[binary]>=3.2",   # Postgres driver (v3) for the audit log
    "pyyaml>=6",              # policy config is YAML (policy-as-code)
    "uvicorn>=0.30",          # serves the HTTP gateway (MCP endpoint + approvals API)
    "httpx>=0.27",            # used by demo/tests to drive the approvals API
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "anyio>=4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
